# ubpm

./: CMakeLists.txt  README.md  action.yml  main.js  ubpm.cmake  ubpm.in  ubpm.sh.in
cmake/: ubpmConfig.cmake.in  ubpmConfigVersion.cmake.in
